feat: open file paths in terminal output in Emacs on click
